--- a/public/user.html
+++ b/public/user.html
@@ -57,7 +57,7 @@
         loop
         muted
         ></video>
-        <button class="next">I understand!</button>
+        <button class="next disabled">I understand!</button>
       </div>
     </div>
     <div class="emailcont slide">
