--- a/public/user.html
+++ b/public/user.html
@@ -40,6 +40,8 @@
           <li>Cheating by AI tools or communication is forbidden.</li>
           <li>Do not disconnect Wi-Fi, sleep, or shut down your device.</li>
           <li>Make sure that your browser is logged in with the same email you use.</li>
+          <li>You can use a hard scientific calculator, not a software one.</li>
+          <li>You mustn't take this page link and paste in other page, If you want to open in another browser, use the main link that sent to you.</li>
           <li>
             Camera and screen permissions must stay active until the exam ends.
           </li>
@@ -95,12 +97,12 @@
             height="100%"
             frameborder="0"
           ></iframe> -->
-          <iframe
+          <!-- <iframe
             id="examFrame"
             src="https://docs.google.com/forms/d/e/1FAIpQLScYWRK4nplfd9NeXcr6ELkMea5FYwg83XHANGPRyWLBNS_UiA/viewform?embedded=true"
             width="100%"
             height="100%"
-          ></iframe>
+          ></iframe> -->
         </div>
       </div>
     </div>
