--- a/public/user.html
+++ b/public/user.html
@@ -35,17 +35,17 @@
           <li>Disable all extensions and screen overlays.</li>
           <li>Submit answers manually before time ends. No auto-submission.</li>
           After you submit the exam, close the page manually to save your
-          submition.
+          submition or let it submit by itself.
           <li>Your screen, camera, and activity will be recorded.</li>
+          <li>Don't click "Switch account" on google form.</li>
           <li>Cheating by AI tools or communication is forbidden.</li>
           <li>Do not disconnect Wi-Fi, sleep, or shut down your device.</li>
-          <li>Make sure that your browser is logged in with the same email you use.</li>
           <li>You can use a hard scientific calculator, not a software one.</li>
           <li>You mustn't take this page link and paste in other page, If you want to open in another browser, use the main link that sent to you.</li>
           <li>
             Camera and screen permissions must stay active until the exam ends.
           </li>
-          <li>The exam closes automatically after 30 minutes.</li>
+          <li>The exam closes automatically after 90 minutes.</li>
         </ol>
         <button class="next">I agree to these rules.</button>
       </div>
