--- a/public/user.html
+++ b/public/user.html
@@ -16,16 +16,16 @@
         <h2>Before we start</h2>
         <ol id="notes">
           <li>
-            Share your full screen with a visible taskbar showing no pinned
+            You must allow sharing your <b>entire screen</b> with a pinned <b>visible taskbar</b> showing no pinned
             apps.
           </li>
           <li>Accessing other tabs, windows, or apps is prohibited.</li>
           <li>Using more than one monitor leads to disqualification.</li>
           <li>Opening Developer Tools or switching tabs is forbidden.</li>
-          <li>Closing or refreshing the exam page ends your session.</li>
-          <li>Re-entry is not allowed after the exam starts.</li>
+          <li>Closing or refreshing the exam page ends your session.
+          
           <li>
-            Camera access is required; your hands must be visible at least 50%
+            Camera access is required; <b>your hands must be visible</b> at least 50%
             of the time.
           </li>
           <li>
@@ -33,21 +33,17 @@
             allowed.
           </li>
           <li>Disable all extensions and screen overlays.</li>
-          <li>Submit answers manually before time ends. No auto-submission.</li>
-          After you submit the exam, close the page manually to save your
-          submition or let it submit by itself.
           <li>Your screen, camera, and activity will be recorded.</li>
-          <li>Don't click "Switch account" on google form.</li>
+          <li>Once you submit the form, <b>don't click on anything</b> and close the tab to finish your exam.</li>
           <li>Cheating by AI tools or communication is forbidden.</li>
           <li>Do not disconnect Wi-Fi, sleep, or shut down your device.</li>
           <li>You can use a hard scientific calculator, not a software one.</li>
-          <li>You mustn't take this page link and paste in other page, If you want to open in another browser, use the main link that sent to you.</li>
           <li>
             Camera and screen permissions must stay active until the exam ends.
           </li>
-          <li>The exam closes automatically after 90 minutes.</li>
+          <li>The exam closes automatically after <b>90 minutes</b>.</li>
         </ol>
-        <button class="next">I agree to these rules.</button>
+        <button class="next disabled">I agree to these rules.</button>
       </div>
     </div>
     <div class="slide">
