--- a/public/user.html
+++ b/public/user.html
@@ -16,17 +16,17 @@
         <h2>Before we start</h2>
         <ol id="notes">
           <li>
-            You must allow sharing your <b>entire screen</b> with a pinned <b>visible taskbar</b> showing no pinned
-            apps.
+            You must allow sharing your <b>entire screen</b> with a pinned
+            <b>visible taskbar</b> showing no pinned apps.
           </li>
           <li>Accessing other tabs, windows, or apps is prohibited.</li>
           <li>Using more than one monitor leads to disqualification.</li>
           <li>Opening Developer Tools or switching tabs is forbidden.</li>
-          <li>Closing or refreshing the exam page ends your session.
-          
+          <li>Closing or refreshing the exam page ends your session.</li>
+
           <li>
-            Camera access is required; <b>your hands must be visible</b> at least 50%
-            of the time.
+            Camera access is required; <b>your hands must be visible</b> at
+            least 50% of the time.
           </li>
           <li>
             Use only Google Chrome or Microsoft Edge. Special browsers are not
@@ -34,7 +34,10 @@
           </li>
           <li>Disable all extensions and screen overlays.</li>
           <li>Your screen, camera, and activity will be recorded.</li>
-          <li>Once you submit the form, <b>don't click on anything</b> and close the tab to finish your exam.</li>
+          <li>
+            Once you submit the form, <b>don't click on anything</b> and close
+            the tab to finish your exam.
+          </li>
           <li>Cheating by AI tools or communication is forbidden.</li>
           <li>Do not disconnect Wi-Fi, sleep, or shut down your device.</li>
           <li>You can use a hard scientific calculator, not a software one.</li>
@@ -50,10 +53,10 @@
       <div class="container">
         <h2>Permissions</h2>
         <video
-        src="https://res.cloudinary.com/drsg8lcbn/video/upload/v1752576816/Permissions_1_gljo3o.mp4"
-        autoplay
-        loop
-        muted
+          src="https://res.cloudinary.com/drsg8lcbn/video/upload/v1752576816/Permissions_1_gljo3o.mp4"
+          autoplay
+          loop
+          muted
         ></video>
         <button class="next disabled">I understand!</button>
       </div>
@@ -105,6 +108,12 @@
     <div class="notification">
       <img src="/cancel.png" alt="cancel" />
       <span class="msg">You has already entered the exam!</span>
+    </div>
+    <div class="credits">
+      <span
+        >This website is made by ❤️ with
+        <a target="_blank" href="https://linktr.ee/_Ahmed_Samy_">Ahmed Samy</a></span
+      >
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="user.js"></script>
